--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v13:21.+'
-
+    compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile files('libs/gson-2.3.1.jar')
 }
