--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@
 
 buildscript {
     repositories {
+        maven { url "http://dl.bintray.com/populov/maven" }
         maven { url 'http://maven.oschina.net/content/groups/public/' }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
@@ -14,6 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "http://dl.bintray.com/populov/maven" }
         maven { url 'http://maven.oschina.net/content/groups/public/' }
+        mavenCentral()
     }
 }
