--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v13:21.+'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile files('libs/gson-2.3.1.jar')
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v13:22.2.0'
+    compile 'com.android.support:design:22.2.0'
 }
